--- a/proyecto001-prueba/src/app/app.component.html
+++ b/proyecto001-prueba/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1 style="text-align: center;">
-Bienvenido {{title}}
-</h1>
+<div>
+    <p>Nombre del empleado: {{nombre}}</p>
+    <p>Edad: {{edad}}</p>
+    <p>Los últimos tres sueldos son: {{sueldos[0]}}, {{sueldos[1]}} y {{sueldos[2]}}</p>
+    <p>En los últimos 3 meses ha ganado: {{ultimos3Sueldos()}}</p>
+    <p>{{esActivo()}}</p>
+</div>
