Asociación de eventos a botones

--- a/proyecto001-prueba/src/app/app.component.html
+++ b/proyecto001-prueba/src/app/app.component.html
@@ -19,3 +19,10 @@
     <p>En los últimos 3 meses ha ganado: {{ultimos3Sueldos()}}</p>
     <p>{{esActivo()}}</p>
 </div>
+<hr>
+<h3>6 - Captura de eventos</h3>
+<div>
+    <p>{{contador}}</p>
+    <button (click)="incrementar()">Incrementar 1</button>
+    <button (click)="decrementar()">Decrementar 1</button>
+</div>
