--- a/proyecto001-prueba/src/app/app.component.html
+++ b/proyecto001-prueba/src/app/app.component.html
@@ -2,7 +2,9 @@
     <p>Nombre del empleado: {{nombre}}</p>
     <p>Edad: {{edad}}</p>
     <p *ngIf="edad >= 18; else menor">Es mayor de edad</p>
-    <ng-template #menor><p>Es un menor de edad</p></ng-template>
+    <ng-template #menor>
+        <p>Es un menor de edad</p>
+    </ng-template>
     <p>Los últimos tres sueldos son: {{sueldos[0]}}, {{sueldos[1]}} y {{sueldos[2]}}</p>
     <table border="1">
         <thead>
@@ -29,8 +31,22 @@
 <br>
 <hr>
 <h3>7 - Directiva ngModel</h3>
-Data binding unidirección (modelo a vista):
+Data binding unidireccional (modelo a vista):
 <input type="text" [ngModel]="nombre">
 <br>
 Data binding bidireccional (modelo-vista):
 <input type="text" [(ngModel)]="nombre">
+<br>
+<br>
+<h4>Lectura y escritura de datos:</h4>
+<div>
+    <p>
+        Ingrese nombre: <input type="text" [(ngModel)]="nombre">
+    </p>
+    <p>
+        Ingrese apellido: <input type="text" [(ngModel)]="apellido">
+    </p>
+    <p>
+        Nombre completo: {{nombre}}, {{apellido}}
+    </p>
+</div>
