Data binding para el formulario - Modelo para artículos

--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -13,16 +13,16 @@
 <br>
 <div>
   <p>
-    Código: <input type="number">
+    Código: <input type="number" [(ngModel)]="codigo">
   </p>
   <p>
-    Descripción: <input type="text">
+    Descripción: <input type="text" [(ngModel)]="descripcion">
   </p>
   <p>
-    Precio: <input type="number">
+    Precio: <input type="number" [(ngModel)]="precio">
   </p>
   <p>
-    <button>Agregar</button>
+    <button (click)="agregar()">Agregar</button>
     <button>Modificar</button>
   </p>
 </div>
