Agregación de artículos a un modelo

--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -9,6 +9,15 @@
       <th>Seleccionar</th>
     </tr>
   </thead>
+  <tbody>
+    <tr *ngFor="let e of articulos">
+      <td>{{e.codigo}}</td>
+      <td>{{e.descripcion}}</td>
+      <td>{{e.precio}}</td>
+      <td><button>Borrar</button></td>
+      <td><button>Seleccionar</button></td>
+    </tr>
+  </tbody>
 </table>
 <br>
 <div>
