Borrar un artículo - Validación de código al agregar un nuevo artículo

--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -14,7 +14,7 @@
       <td>{{e.codigo}}</td>
       <td>{{e.descripcion}}</td>
       <td>{{e.precio}}</td>
-      <td><button>Borrar</button></td>
+      <td><button (click)="borrar(e.codigo)">Borrar</button></td>
       <td><button>Seleccionar</button></td>
     </tr>
   </tbody>
