Selección de un artículo y sus datos

--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -15,7 +15,7 @@
       <td>{{e.descripcion}}</td>
       <td>{{e.precio}}</td>
       <td><button (click)="borrar(e.codigo)">Borrar</button></td>
-      <td><button>Seleccionar</button></td>
+      <td><button (click)="seleccionar(e.codigo)">Seleccionar</button></td>
     </tr>
   </tbody>
 </table>
