Un producto ahora se puede modificar

--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -32,6 +32,6 @@
   </p>
   <p>
     <button (click)="agregar()">Agregar</button>
-    <button>Modificar</button>
+    <button (click)="modificar()">Modificar</button>
   </p>
 </div>
