--- a/proyecto002-data-binding/src/app/app.component.html
+++ b/proyecto002-data-binding/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Administración de artículos</h1>
-<table border="1">
+<table border="1" *ngIf="hayArticulos()">
   <thead>
     <tr>
       <th>Código</th>
