Vista del selector numérico con los controles

--- a/proyecto006-metodos-hijo/src/app/selector-numerico/selector-numerico.component.html
+++ b/proyecto006-metodos-hijo/src/app/selector-numerico/selector-numerico.component.html
@@ -1,1 +1,7 @@
-<p>selector-numerico works!</p>
+<div class="selector">
+    <button (click)="decrementar()">-</button>
+    <div class="valor">
+        {{actual}}
+    </div>
+    <button (click)="incrementar()">+</button>
+</div>
