--- a/proyecto011-rutas/src/app/juego-dados/juego-dados.component.html
+++ b/proyecto011-rutas/src/app/juego-dados/juego-dados.component.html
@@ -1,1 +1,9 @@
-<p>juego-dados works!</p>
+<app-dado [valor]="valor1"></app-dado>
+<app-dado [valor]="valor2"></app-dado>
+<app-dado [valor]="valor3"></app-dado>
+<hr>
+<button (click)="tirar()">Tirar</button>
+<hr>
+<p>
+    Resultado: {{resultado}}
+</p>
