--- a/proyecto018-material/src/app/components/pais-colombia/pais-colombia.component.html
+++ b/proyecto018-material/src/app/components/pais-colombia/pais-colombia.component.html
@@ -1,1 +1,10 @@
-<p>pais-colombia works!</p>
+<div class="datos">
+    <p>
+        <strong>Nombre del país:</strong> Colombia
+    </p>
+    <p>
+    <img src="" alt="Colombia">
+    </p>
+    <h3>Datos generales</h3>
+    <p>Colombia es un país del extremo norte de Sudamérica. Su paisaje cuenta con bosques tropicales, las montañas de los Andes y varias plantaciones de café. En Bogotá, su capital a gran altura, el distrito Zona Rosa es famoso por sus restaurantes y tiendas. Cartagena, en la costa del Caribe, tiene una Ciudad Antigua colonial amurallada, un castillo del siglo XVI y arrecifes de coral cercanos.</p>
+</div>
