Datos generales para el país de Argentina

--- a/proyecto018-material/src/app/components/pais-argentina/pais-argentina.component.html
+++ b/proyecto018-material/src/app/components/pais-argentina/pais-argentina.component.html
@@ -1,1 +1,10 @@
-<p>pais-argentina works!</p>
+<div class="datos">
+    <p>
+        <strong>Nombre del país:</strong> Argentina
+    </p>
+    <p>
+    <img src="" alt="Argentina">
+    </p>
+    <h3>Datos generales</h3>
+    <p>Argentina es un país sudamericano de gran envergadura con un terreno que incluye las montañas de los Andes, lagos glaciales y praderas en las Pampas, la tierra tradicional de pastoreo de su famoso ganado. El país es conocido por el baile y la música del tango. Su gran capital cosmopolita, Buenos Aires, se centra en la Plaza de Mayo, rodeada por imponentes edificios del siglo XIX, como la Casa Rosada, el icónico palacio presidencial.</p>
+</div>
