Datos generales para el país de México

--- a/proyecto018-material/src/app/components/pais-mexico/pais-mexico.component.html
+++ b/proyecto018-material/src/app/components/pais-mexico/pais-mexico.component.html
@@ -1,1 +1,10 @@
-<p>pais-mexico works!</p>
+<div class="datos">
+    <p>
+        <strong>Nombre del país:</strong> México
+    </p>
+    <p>
+    <img src="" alt="México">
+    </p>
+    <h3>Datos generales</h3>
+    <p>México es un país entre los Estados Unidos y América Central, conocido por las playas en el Pacífico y el golfo de México, y su diverso paisaje de montañas, desiertos y selvas. Las ruinas antiguas, como Teotihuacán y la ciudad maya de Chichén Itzá, se distribuyen por el país, al igual que las ciudades de la época colonial española. En la capital Ciudad de México, las elegantes tiendas, los famosos museos y los restaurantes gourmet son parte de la vida moderna.</p>
+</div>
