Ajuste para mostrar resultado de operación en pantalla

--- a/proyecto022-mat-checkbox/src/app/app.component.html
+++ b/proyecto022-mat-checkbox/src/app/app.component.html
@@ -18,4 +18,7 @@
     División
   </mat-checkbox>
   <button mat-raised-button color="primary" (click)="operar()">Calcular</button>
+  <p>
+    {{resultado}}
+  </p>
 </div>
