Vista HTML para el diálogo emergente

--- a/proyecto031-mat-dialog/src/app/dialogs/articulo-dialogo/articulo-dialogo.component.html
+++ b/proyecto031-mat-dialog/src/app/dialogs/articulo-dialogo/articulo-dialogo.component.html
@@ -1,1 +1,20 @@
-<p>articulo-dialogo works!</p>
+<div>
+    <h1 mat-dialog-title>Artículo</h1>
+    <div class="mat-dialog-content">
+        <div style="display: flex; flex-direction: column; margin: 1rem auto; max-width: 600px; padding: 1rem;">
+            <mat-form-field>
+                <input type="number" [(ngModel)]="data.codigo" placeholder="Ingrese código">
+            </mat-form-field>
+            <mat-form-field>
+                <input type="text" [(ngModel)]="data.descripcion" placeholder="Ingrese descripción">
+            </mat-form-field>
+            <mat-form-field>
+                <input type="number" [(ngModel)]="data.precio" placeholder="Ingrese precio">
+            </mat-form-field>
+        </div>
+    </div>
+    <div mat-dialog-actions>
+        <button mat-button (click)="cancelar()">Cancelar</button>
+        <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Confirmar</button>
+    </div>
+</div>
