Agregación atributo matInput para un campo HTML tipo input

--- a/proyecto031-mat-dialog/src/app/dialogs/articulo-dialogo/articulo-dialogo.component.html
+++ b/proyecto031-mat-dialog/src/app/dialogs/articulo-dialogo/articulo-dialogo.component.html
@@ -3,13 +3,13 @@
     <div class="mat-dialog-content">
         <div style="display: flex; flex-direction: column; margin: 1rem auto; max-width: 600px; padding: 1rem;">
             <mat-form-field>
-                <input type="number" [(ngModel)]="data.codigo" placeholder="Ingrese código">
+                <input matInput type="number" [(ngModel)]="data.codigo" placeholder="Ingrese código">
             </mat-form-field>
             <mat-form-field>
-                <input type="text" [(ngModel)]="data.descripcion" placeholder="Ingrese descripción">
+                <input matInput type="text" [(ngModel)]="data.descripcion" placeholder="Ingrese descripción">
             </mat-form-field>
             <mat-form-field>
-                <input type="number" [(ngModel)]="data.precio" placeholder="Ingrese precio">
+                <input matInput type="number" [(ngModel)]="data.precio" placeholder="Ingrese precio">
             </mat-form-field>
         </div>
     </div>
