Parametrización de los atributos de la barra de menú

--- a/proyecto039-bootstrap-componente/src/app/app.component.html
+++ b/proyecto039-bootstrap-componente/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <bs-barra-menu></bs-barra-menu>
+  <bs-barra-menu [opciones]="opciones" colorFondo="bg-info" (presionOpcion)="presion($event)"></bs-barra-menu>
 </div>
