Vista HTML para la componente Alerta

--- a/proyecto040-bs-alerta/src/app/alerta/alerta.component.html
+++ b/proyecto040-bs-alerta/src/app/alerta/alerta.component.html
@@ -1,1 +1,6 @@
-<p>alerta works!</p>
+<div class="alert {{color}} alert-dismissible fade show" roles="alert">
+    {{mensaje}}
+    <button type="button" class="close" data-bs-dismiss="alert" aria-label="close">
+        <span aria-hidden="true">x</span>
+    </button>
+</div>
