Ajuste del botón de cierra. Pruebas con otros colores de alerta

--- a/proyecto040-bs-alerta/src/app/alerta/alerta.component.html
+++ b/proyecto040-bs-alerta/src/app/alerta/alerta.component.html
@@ -1,6 +1,6 @@
 <div class="alert {{color}} alert-dismissible fade show" roles="alert">
     {{mensaje}}
-    <button type="button" class="close" data-bs-dismiss="alert" aria-label="close">
-        <span aria-hidden="true">x</span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close">
+        <span aria-hidden="true"></span>
     </button>
 </div>
