--- a/proyecto041-bs-tabla/src/app/tabla/tabla.component.html
+++ b/proyecto041-bs-tabla/src/app/tabla/tabla.component.html
@@ -1,1 +1,16 @@
-<p>tabla works!</p>
+<table class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th scope="col" *ngFor="let e of titulos">
+                {{e}}
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let e of filas">
+            <td *ngFor="let k of objectKeys(e)">
+                {{e[k]}}
+            </td>
+        </tr>
+    </tbody>
+</table>
