--- a/proyecto053-rutas-anidadas/src/app/components/america/america.component.html
+++ b/proyecto053-rutas-anidadas/src/app/components/america/america.component.html
@@ -1,1 +1,13 @@
-<p>america works!</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31536306.714862086!2d-54.01447990393665!3d-20.38062741924525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1583676893900!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<ul class="nav justify-content-center">
+    <li class="nav-item">
+        <a routerLink="colombia" class="nav-link">Colombia</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink="argentina" class="nav-link">Argentina</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink="mexico" class="nav-link">México</a>
+    </li>
+</ul>
+<router-outlet></router-outlet>
