--- a/proyecto054-lazy-loading/src/app/modules/europa/europa/europa.component.html
+++ b/proyecto054-lazy-loading/src/app/modules/europa/europa/europa.component.html
@@ -1,1 +1,13 @@
-<p>europa works!</p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9880418.608500127!2d2.640727530399596!3d45.69187171781666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1583677509059!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<ul class="nav justify-content-center">
+    <li class="nav-item">
+        <a routerLink="espana" class="nav-link">España</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink="alemania" class="nav-link">Alemania</a>
+    </li>
+    <li class="nav-item">
+        <a routerLink="italia" class="nav-link">Italia</a>
+    </li>
+</ul>
+<router-outlet></router-outlet>
